[package]
name = "poltergeist"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.8", features = ["json"] }
base64 = "0.22.1"
anyhow = "1.0.86"
config = { version = "0.15.19", features = ["yaml"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"] }
moka = { version = "0.12.13", features = ["future"] }
rand = "0.8.5"
reqwest = { version = "0.13.1", features = ["json"] }
rsa = { version = "0.9.10", features = ["std"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
sha2 = "0.10.9"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["fmt", "json", "env-filter"] }
base64-url = { version = "3.0.2", features = ["std"] }
opentelemetry = "0.31.0"
opentelemetry-otlp = { version = "0.31.0", features = ["grpc-tonic"] }
opentelemetry_sdk = "0.31.0"
tracing-serde = "0.2.0"
tracing-attributes = "0.1.31"
tracing-opentelemetry = "0.32.1"
opentelemetry-semantic-conventions = "0.31.0"
tower = "0.5.3"
tower-http = { version = "0.6.8", features = ["request-id", "trace"] }

[dev-dependencies]
wiremock = "0.6.2"

